--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_${spark.compat.version}</artifactId>
-            <version>2.1.0</version>
+            <version>2.4.7</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
@@ -55,16 +55,22 @@
              <artifactId>avro-sql_${spark.compat.version}</artifactId>
              <version>1.0.1</version>
          </dependency> -->
+        <dependency>
+            <groupId>io.delta</groupId>
+            <artifactId>delta-core_2.11</artifactId>
+            <version>0.6.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_${spark.compat.version}</artifactId>
-            <version>2.1.0</version>
+            <version>2.4.7</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive_${spark.compat.version}</artifactId>
-            <version>2.1.0</version>
+            <version>2.4.7</version>
             <scope>provided</scope>
         </dependency>
 
